- removing stale workshop items to avoid version conflicts
- updated .zip item workshop urls
- client sided custom player models

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -1,7 +1,7 @@
 ﻿; NEXT STEPS:
 ; - edit [SteamWorkshop] to allow downloading Workshop items and TOXIKK updates
 ; - edit [MapList] to define which maps you want to offer
-; - edit [Defaults] to use static or dynamic GamePort and QueryPort and whether you want a welcome message (@Import=Motd)
+; - edit [Defaults] to use static or dynamic GamePort/QueryPort, whether you want a welcome message (@Import=Motd) or enable the custom player model mutator
 ; - edit [Motd] with your custom Welcome message
 ;
 ; Assignment operators used in this file:
@@ -74,6 +74,53 @@ WelcomeMessage=UDKMutatH0r.ini\MutatH0r.CRZMutator_Motd\WelcomeMessage
 User=anonymous
 Password=
 
+; these items no longer exist on steam workshop, but have .zip replacements. delete them to avoid conflicts
+DeleteItem=754310974 ;BL-LongestYard
+DeleteItem=698385286 ;Calico M950 Pistol (replaces Violator)
+DeleteItem=702872610 ;KF2 Double Barrel Shotgun (aka Boomstick)
+DeleteItem=728142135 ;Quake 3 Weapon Overhaul
+DeleteItem=726797553 ;KF2 S&W 500
+DeleteItem=713969489 ;Custom Music
+DeleteItem=621419323 ;Toxikk Ads
+DeleteItem=626730010 ;Custom Player Models
+DeleteItem=628115148 ;Republic Commandos (Star Wars)
+DeleteItem=632879016 ;Tron Anon
+DeleteItem=634232289 ;Duke Nukem Model
+DeleteItem=639972958 ;Homer
+DeleteItem=697236573 ;Doom3Marines
+DeleteItem=697333354 ;Postal Dude
+DeleteItem=697456338 ;Venom
+DeleteItem=729789993 ;Dat Boi (Kermit)
+DeleteItem=739061958 ;2000 Spidey Mega Pack
+DeleteItem=739107145 ;UT2004 Cathode
+
+; player models are now client-side only and not needed on the server anymore
+DeleteItem=721300253 ;Gretel MK II (TS2)
+DeleteItem=861873710 ;Sam "Serious" Stone
+DeleteItem=BFStormtrooper
+DeleteItem=BloodRaven
+DeleteItem=CateArcher
+DeleteItem=DatBoi
+DeleteItem=Doom4Rev_LO
+DeleteItem=DukeNukem
+DeleteItem=HoloGirls
+DeleteItem=HomerSimpson
+DeleteItem=MasterChiefHalo3
+DeleteItem=PostalDude
+DeleteItem=PredatorTwoPack
+DeleteItems=purplemonkey
+DeleteItem=Q3Doomguys
+DeleteItem=RepublicCommandos
+DeleteItem=RetroSpidey
+DeleteItem=TH4Jango
+DeleteItem=TS2Gretel
+DeleteItem=TronAnon
+DeleteItem=UTCathode
+DeleteItem=Venom
+DeleteItem=WaspSoldiers
+DeleteItem=XanRobot
+DeleteItem=XenoPack
+
 ;Maps
 Item=601961102 ;CC-Bloxeh
 Item=601904093 ;CC-Sprinta
@@ -95,53 +142,38 @@ Item=http://toxikk.beham.biz/workshop/FacingWorlds.zip ;CC-FacingWorlds
 Item=http://toxikk.beham.biz/workshop/Goose.zip ;BL-GooseShell_V1
 Item=http://toxikk.beham.biz/workshop/Defiance.zip ;BL-Defiance
 Item=http://toxikk.beham.biz/workshop/Rankin.zip ;BL-Rankin
+Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem (glitchy when alt-tabbing)
 Item=http://toxikk.beham.biz/workshop/Map07Doom.zip ;BL-Map07Doom (Dead Simple)
 Item=http://toxikk.beham.biz/workshop/Map30Doom.zip ;BL-Map32Doom (Icon of Sin)
 Item=http://toxikk.beham.biz/workshop/Map32Doom.zip ;BL-Map32Doom (Grosse Censored)
-Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem (glitchy when alt-tabbing)
 Item=http://toxikk.beham.biz/workshop/OverdozedPack.zip ;BL-RoomBETA, BL-WohnkuecheBETA, CC-BasicallyBeta4, CC-KlinikaBeta1
 
 
 ; Weapons
 Item=601819301 ;Railgun (piercing Stingray beam)
-Item=http://toxikk.beham.biz/workshop/KF2Boomstick.zip ;KF2 Double Barrel Shotgun (aka Boomstick)
 Item=http://toxikk.beham.biz/workshop/Q3Weapons.zip ;Quake 3 Weapon Overhaul
 Item=http://toxikk.beham.biz/workshop/NewDoomWeapons.zip
+Item=http://toxikk.beham.biz/workshop/KF2Boomstick.zip ;KF2 Double Barrel Shotgun (aka Boomstick)
 Item=http://toxikk.beham.biz/workshop/Doom3RL.zip
 Item=http://toxikk.beham.biz/workshop/Calico.zip ;Calico M950 Pistol (replaces Violator)
 Item=http://toxikk.beham.biz/workshop/SWFiveHundred.zip ;KF2 S&W 500
 Item=http://toxikk.beham.biz/workshop/SWCrossbow.zip
+Item=http://toxikk.beham.biz/workshop/Doom4SSG.zip
 
 ; Game Types
 Item=667216025 ;TeamArena
 
 ; Tools
-Item=672299305 ;Server Utils 1 (QuickVoting, ServerIdle, AdminPlus)
+Item=672299305 ;Server Utils 1 (QuickVoting, ExtVoting, ServerIdle, AdminPlus, FallbackToMap, ExtPlayerPawn, MutSpawnProtect, NoRavenAnim, Comp2v2)
 Item=603855831 ;MutatH0r pack
+;Item=http://toxikk.beham.biz/workshop/CustomMusic.zip
+;Item=http://toxikk.beham.biz/workshop/ToxikkAds.zip
 
-; Player Models (only the mutator is required on the server. models are only needed if you want to force clients to download them)
-Item=http://toxikk.beham.biz/workshop/CustomPlayers.zip ;Custom Player Models mutator (needed to support custom models)
-Item=http://toxikk.beham.biz/workshop/639972958.zip ;Homer
-Item=http://toxikk.beham.biz/workshop/729789993.zip ;Dat Boi (Kermit)
-Item=http://toxikk.beham.biz/workshop/purplemonkey.zip
-;Item=http://toxikk.beham.biz/workshop/628115148.zip ;Republic Commandos (Star Wars)
-;Item=http://toxikk.beham.biz/workshop/632879016.zip ;Tron Anon
-;Item=http://toxikk.beham.biz/workshop/634232289.zip ;Duke Nukem Model
-;Item=http://toxikk.beham.biz/workshop/697236573.zip ;Doom3Marines
-;Item=http://toxikk.beham.biz/workshop/697333354.zip ;Postal Dude
-;Item=http://toxikk.beham.biz/workshop/697456338.zip ;Venom
-;Item=http://toxikk.beham.biz/workshop/721300253.zip ;Gretel MK II (TS2)
-;Item=http://toxikk.beham.biz/workshop/739061958.zip ;2000 Spidey Mega Pack
-;Item=http://toxikk.beham.biz/workshop/739107145.zip ;UT2004 Cathode
-;Item=http://toxikk.beham.biz/workshop/Q3Doomguys.zip
-;Item=http://toxikk.beham.biz/workshop/Q3Pack.zip
-;Item=http://toxikk.beham.biz/workshop/WaspSoldiers.zip
-;Item=http://toxikk.beham.biz/workshop/PredatorPM.zip
-;Item=http://toxikk.beham.biz/workshop/XenoPack.zip
-;Item=http://toxikk.beham.biz/workshop/KFNightfall.zip
-;Item=http://toxikk.beham.biz/workshop/HoloGirls.zip
-;Item=http://toxikk.beham.biz/workshop/Cate.zip
-;Item=http://toxikk.beham.biz/workshop/TH4Jango.zip
+; Custom Player Models (only the mut is needed on the server. The models are client-side-only)
+Item=http://toxikk.beham.biz/workshop/CustomPlayers.zip
+
+[Banlist]
+BannedSteamIDs+=76561198140306560
 
 
 [MapList]
@@ -175,7 +207,7 @@ GamePort=@port,7777,2
 QueryPort=@port,27015,1
 ; uncomment the next line if you want to use steam sockets (they are supposed to help with NAT-traversal, but can cause other problems)
 ;@SteamSockets=true
-Difficulty=@skillclass,6
+Difficulty=@skillclass,7
 MinSkillClass=
 MaxSkillClass=
 DefaultEngine.ini\IpDrv.TcpNetDriver\AllowDownloads=True
@@ -190,9 +222,11 @@ UDKQuickVoting.ini\QuickVoting.CommonVotes\bKick=True
 UDKQuickVoting.ini\QuickVoting.CommonVotes\bKillBots=True
 UDKQuickVoting.ini\QuickVoting.CommonVotes\bAddBots=True
 DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=Difficulty,GoalScore,LoadoutFlags,DrawDamageRadius,Roq3tPreset,Roq3tMutate,SuperRayPreset,SuperRayMutate
+;Mutators+=CustomPlayers.CRZMutator_CustomPlayers
 Mutators+=MutatH0r.CRZMutator_TickRate
 Mutators+=QuickVoting.CommonVotes
-Mutators+=ServerIdle.ServerIdle
+Mutators+=ExtVoting.EVMut
+;Mutators+=ServerIdle.ServerIdle
 
 [BL-Defaults]
 ; shared settings for Bloodlust, SquadAssault and TeamArena which are imported in various [DedicatedServer...] sections
@@ -244,78 +278,6 @@ UDKMutatH0r.ini\MutatH0r.CRZMutator_RegenDecay\ArmorRegenLimit=0
 UDKMutatH0r.ini\MutatH0r.CRZMutator_RegenDecay\ArmorDecayAmount=1
 UDKMutatH0r.ini\MutatH0r.CRZMutator_RegenDecay\ArmorDecayLimit=100
 
-[PlayerModels]
-; add "@Import=PlayerModels" to your [DedicatedServerX] config if you want to enable custom player models
-; Clients can use whatever models they have installed locally. 
-; The Customplayers models listed below will be forcefully downloaded by clients. Bett
-@Copy=@WorkshopDir@\CustomPlayers\UDKCustomPlayers.ini
-Mutators*=CustomPlayers.CRZMutator_CustomPlayers
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bShowReminder=false
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bDisableVoices=false
-CustomPlayers!=
-CustomPlayers+=(PlayerClass="HomerSimpson.PI_HomerSimpson",DownloadURL="")
-CustomPlayers+=(PlayerClass="DatBoi.PI_DatBoi",DownloadURL="")
-CustomPlayers+=(PlayerClass="BonziBuddy.PI_Bonzi",DownloadURL="")
-;CustomPlayers+=(PlayerClass="CustomPlayers.PI_Drayos",DownloadURL="")
-;CustomPlayers+=(PlayerClass="CustomPlayers.PI_Exocom",DownloadURL="")
-;CustomPlayers+=(PlayerClass="TronAnon.PI_TronAnon",DownloadURL="")
-;CustomPlayers+=(PlayerClass="PredatorPM.PI_Predator",DownloadURL="")
-;CustomPlayers+=(PlayerClass="XenoPack.PI_XenomorphCM",DownloadURL="")
-;CustomPlayers+=(PlayerClass="PDudeRedux.PI_PostalRedux",DownloadURL="")
-;CustomPlayers+=(PlayerClass="WaspSoldiers.PI_WaspSoldier",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Beach",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Duck",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Merica",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Skull",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Tie",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Toxikk",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_XMas",DownloadURL="")
-;CustomPlayers+=(PlayerClass="DukeNukem.PI_DankNukem",DownloadURL="")
-;CustomPlayers+=(PlayerClass="CustomPlayers.PI_Bones",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doomguy",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3DoomStatue",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3DoomPhobos",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doom1Stat",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doom2Stat",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doom3Stat",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Pack.PI_Ranger",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Pack.PI_Sarge",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Pack.PI_Crash",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Q3Pack.PI_Hunter",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_M",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_MSarge",DownloadURL="")
-;CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_S",DownloadURL="")
-;CustomPlayers+=(PlayerClass="KFNightfall.PI_NFFoster",DownloadURL="")
-;CustomPlayers+=(PlayerClass="KFNightfall.PI_NFBombsquad",DownloadURL="")
-;CustomPlayers+=(PlayerClass="KFNightfall.PI_NFNoble",DownloadURL="")
-;CustomPlayers+=(PlayerClass="KFNightfall.PI_NFMutant",DownloadURL="")
-;CustomPlayers+=(PlayerClass="KFNightfall.PI_NFMagma",DownloadURL="")
-;CustomPlayers+=(PlayerClass="TS2Gretel.PI_Gretel",DownloadURL="") 
-;CustomPlayers+=(PlayerClass="CustomPlayers.PI_HK47Char",DownloadURL="")
-;CustomPlayers+=(PlayerClass="CustomPlayers.PI_DAR",DownloadURL="")
-;CustomPlayers+=(PlayerClass="CustomPlayers.PI_DARGreen",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_White",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_ARC",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_07Char",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_38Char",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_40Char",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_62Char",DownloadURL="")
-;CustomPlayers+=(PlayerClass="TH4Jango.PI_Jango",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_Venom",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomCyan",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomGreen",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomIndigo",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomOrange",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomPink",DownloadURL="")
-;CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomPurple",DownloadURL="")
-;CustomPlayers+=(PlayerClass="HoloGirls.PI_HoloGreen",DownloadURL="")
-;CustomPlayers+=(PlayerClass="HoloGirls.PI_HoloBlue",DownloadURL="")
-;CustomPlayers+=(PlayerClass="RetroSpidey.PI_Spidey",DownloadURL="")
-;CustomPlayers+=(PlayerClass="UTCathode.PI_Cathode",DownloadURL="")
-;CustomPlayers+=(PlayerClass="CateArcher.PI_Cate",DownloadURL="")
-
 
 ;===============================================================================================
 
@@ -327,11 +289,11 @@ ServerName=All game modes
 DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=NumPlay,Difficulty,GoalScore
 GameProfiles!=
 GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Bloodlust",GameClass="@2@",Options="?NumPlay=6",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
-GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options="?NumPlay=6?Difficulty=3",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
+GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options="?NumPlay=6?Difficulty=3",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts=)
 GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZTeamGame}:(MapName="@1@",GameName="Squad Assault",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
 GameProfiles+=@Loop {@BLMaps@}{TeamArena.TAGame}:(MapName="@1@",GameName="Team Arena",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
-GameProfiles+=@Loop {@CCMaps@}{Cruzade.CRZCellCapture}:(MapName="@1@",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
-GameProfiles+=@Loop {@ADMaps@}{Cruzade.CRZAreaDomination}:(MapName="@1@",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@CCMaps@}{Cruzade.CRZCellCapture}:(MapName="@1@",GameName="Cell Capture",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@ADMaps@}{Cruzade.CRZAreaDomination}:(MapName="@1@",GameName="Area Domination",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
 Map=BL-Artifact
 GoalScore=40
 Mutators*=MutatH0r.CRZMutator_DmgPlume
@@ -360,8 +322,8 @@ Mutators*=Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth
 ServerName=Bloodlust+Instagib
 @Import=BL-Defaults
 GameProfiles!=
-GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
-GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Instagib",GameClass="Cruzade.CRZBloodlust",Options="?Difficulty=2",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Bloodlust",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Instagib",GameClass="Cruzade.CRZBloodlust",Options="?Difficulty=2",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts=)
 Map=BL-Artifact
 Mutators*=MutatH0r.CRZMutator_DmgPlume
 
@@ -394,23 +356,10 @@ ServerName=Rocket Instagib
 @Import=BL-Defaults
 GoalScore=30
 GoalScoreBL=30
-Mutators*=MutatH0r.CRZMutator_Loadout,MutatH0r.CRZMutator_Roq3t,MutatH0r.CRZMutator_DmgPlume,CRZMutator_NoStealth
-Loadout=8A
+Mutators*=MutatH0r.CRZMutator_RocketInstagib
 Map=BL-LongestYard
 GameProfiles!=
-GameProfiles+=@Loop {BL-LongestYard,BL-FusionKKore,BL-Dedale,BL-Cube,BL-Artifact,BL-Ganesha}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options="?Roq3tPreset=RocketInsta?Loadout=8A",Mutators=,ExcludedMuts=)
-Roq3tPreset=RocketInsta
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\Speed=1800
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\Knockback=85000
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\KnockbackFactorOthers=1.0
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\KnockbackFactorSelf=1.0
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\MinKnockbackVert=600
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\MaxKnockbackVert=1000000
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\FireInterval=1.0
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\DamageRadius=220
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\DamageFactorDirect=10.0
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\DamageFactorSplash=0.10
-UDKMutatH0r.ini\RocketInsta Roq3tConfig\DamageFactorSelf=1.0
+GameProfiles+=@Loop {BL-LongestYard,BL-FusionKKore,BL-Dedale,BL-Cube,BL-Artifact,BL-Ganesha}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
 
 [DedicatedServer8]
 @Import=BL-Defaults
